# ternary-science

./: AGENT.md  Cargo.toml  README.md  SCIENCE-PAPER.md
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: cross_validation.rs  gpu_benchmarks.rs  laws.rs  lib.rs  metal.rs  scaling.rs  species.rs
